--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,80 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
+ * This is a manifest file that'll automatically include all the stylesheets available in this directory
+ * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
+ * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require_tree .
- */
+*/
+
+.box {
+	margin: 10px 0;
+	border-color: black #BBBBBB #BBBBBB;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 3px;
+	box-shadow: 0 0 1px #A6A6A6;
+}
+
+.box-header {
+	padding: 4px 0 4px 10px;
+	background-color: #464746;
+	font-weight: bold;
+	color: white;
+}
+
+
+.post {
+	border-radius: 5px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	margin-bottom: 20px;
+	background-color: #fff;
+	border: 1px solid #e3e3e3;
+	padding: 4px 20px 4px 20px;
+}
+.post-meta {
+	text-align: right;
+}
+
+.admin-menu {
+	width: 110px;
+	margin-top: 150px;
+}
+
+.sidebar {
+	background-color: #fff;
+	border: 1px solid #e3e3e3;
+	padding: 4px 20px 4px 20px;
+	border-radius: 5px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.comment {
+	background-color: #fff;
+	border: 1px solid #e3e3e3;
+	padding: 4px 20px 4px 20px;
+	border-radius: 5px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+
+body .hero-unit {
+	background-color: #6689a8;
+	color: white;
+}
+
+.CodeRay {     
+font-family: 'Courier New', 'Terminal', monospace;     
+padding: 3px 5px;     
+overflow: auto;     
+font-size: 12px;     
+margin: 12px 0;     
+}     
+.CodeRay pre {     
+margin: 0px;     
+padding: 0px;     
+}     
+  
+code{
+border: 1px solid #eaeaea;
+background-color: #f8f8f8;
+border-radius: 3px;
+}
