--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,15 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @blog.name %>
-</p>
 
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
+<div class='post'>
+  <h3>
+    <%=@blog.title %></h3>
+    <hr/>
+  <p>
+    <%= markdown @blog.content.html_safe%></p>
+</div>
+<div class='comment'>
+  <!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1816428"></script>
+<!-- UY END -->
+</div>
