--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Blog -%>
+<%- model_class = Comment -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -6,28 +6,26 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:category_id) %></th>
+      <th><%= model_class.human_attribute_name(:commenter) %></th>
+      <th><%= model_class.human_attribute_name(:body) %></th>
+      <th><%= model_class.human_attribute_name(:blog_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% if @blogs ==nil
-          @blogs= Blog.paginate page: params[:page], order: 'created_at desc', per_page: 15;
-       end
-      %>
-    <% @blogs.each do |blog| %>
+    <% @comments.each do |comment| %>
       <tr>
-        <td><%= link_to blog.id, blog_path(blog) %></td>
-        <td><%= blog.title %></td>
-        <td><%= blog.category_id %></td>
-        <td><%=l blog.created_at %></td>
+        <td><%= link_to comment.id, comment_path(comment) %></td>
+        <td><%= comment.commenter %></td>
+        <td><%= comment.body %></td>
+        <td><%= comment.blog_id %></td>
+        <td><%=l comment.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_blog_path(blog), :class => 'btn btn-mini' %>
+                      edit_comment_path(comment), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      blog_path(blog),
+                      comment_path(comment),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,9 +34,7 @@
     <% end %>
   </tbody>
 </table>
-<div> 
-  <%= will_paginate @blogs, renderer: BootstrapPagination::Rails,:previous_label=> '上一页',:next_label=> '下一页' %>
-</div>  
+
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_blog_path,
+            new_comment_path,
             :class => 'btn btn-primary' %>
