--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GuhhjjBlog</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+	<title>Harry's Farm</title>
+	<%= stylesheet_link_tag    "application", :media =>
+	"all" %>
+	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
+	<style type="text/css">
+     body {
+		color: #666;
+		padding-top: 60px;
+		background-color: #e4e9fb;
+		font-family: "Helvetica Neue", Helvetica, STHeiTi, "Microsoft YaHei", Arial, sans-serif;
+	}
+    </style>
 </head>
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand">哈利农庄</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li>
+							<%= link_to "首页", home_path %></li>
+						<li>
+							<%= link_to "登录", admin_path %></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<%= yield %>
+	<div class="container">
+		<% if @home_flag =='1' %>
+		<div class="hero-unit">
+			<h1></h1>
+			<h2>Focus. Disconnect. Do not be distracted.</h2>
+			<p>
+				<a class="btn btn-primary btn-large btn-info">了解更多</a>
+			</p>
+		</div>
+		<% end %>
+		<div class="row">
+			<div class="span9">
+				<%= yield %></div>
+			<div class="span3">
+				<div class="sidebar">
+					<div class="box">
+						<div class='box-header'>分类</div>
+						<div>
+							<table class="table table-condensed">
+								<% @categories= Category.all%>
+								<%= render @categories %>
+							</table>
+						</div>
+					</div>
+					<div class="box">
+						<div class='box-header'>分类</div>
+						<div>
+							<table class="table table-condensed">
+								<% @categories= Category.all%>
+								<%= render @categories %>
+							</table>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<hr/>
+		<footer>
+			<p>&copy; Company 2013</p>
+		</footer>
+
+	</div>
 
 </body>
 </html>
