--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @category, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
+  <div class="control-group" id="add_comment">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
