--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 		padding-top: 60px;
 		background-color: #e4e9fb;
 		font-family: "Helvetica Neue", Helvetica, STHeiTi, "Microsoft YaHei", Arial, sans-serif;
+		font-size: 14px;
+  		line-height: 18px;
 	}
     </style>
 </head>
@@ -24,8 +26,6 @@
 					<ul class="nav">
 						<li>
 							<%= link_to "首页", home_path %></li>
-						<li>
-							<%= link_to "登录", admin_path %></li>
 					</ul>
 				</div>
 			</div>
