--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class='post'>
   <h3>
     <%=@blog.title %></h3>
@@ -7,9 +5,13 @@
   <p>
     <%= markdown @blog.content.html_safe%></p>
 </div>
-<div class='comment'>
-  <!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1816428"></script>
-<!-- UY END -->
+<div class='new_comment'>
+   <h4 ><span id='comment_count'><%=@blog.comments.count%></span>条评论</h4>
+   <%= render :partial => 'comments/form' %>
 </div>
+ <hr/>
+<div class='comments' id='comment_list'>
+   <%= render :partial => 'comments' %>
+</div>
+
+
