--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -3,6 +3,6 @@
 	<td><%= link_to :controller => "main", :action => "index" , :category_id => category.id do %><%=category.name%><% end %>
 	</td>
 	<td>
-		<%=category.blogs.count%>
+		<%=category.blogs_count%>
 	</td>
 </tr>
