--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -14,11 +14,11 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              comments_path, :class => 'btn'  %>
+              blog_comments_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_comment_path(@comment), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              comment_path(@comment),
+              blog_comments_path(@comment),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
