--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,7 +21,7 @@
 			<div class="span3">
 				<ul class="nav nav-pills nav-stacked admin-menu">
 					<li>
-						<%= link_to 'blogs', blogs_path(:flag =>"1"),:class=>'btn-info'%></li>
+						<%= link_to 'blogs', admin_blogs_path(:flag =>"1"),:class=>'btn-info'%></li>
 					<li>
 						<%= link_to 'categories', categories_path(:flag =>"1"),:class=>'btn-info'%></li>
 					<li>
